# ytclfr-v2

./: .env.example  .env.local.example  .gitignore  .impeccable.md  AGENTS.md  GLOBAL_RULES.md  Makefile  README.md  alembic.ini  pyproject.toml  setup-ytclfr.ps1  test_groq.py
.claude/: settings.json
.runtime/postgres/data/: postmaster.opts  postmaster.pid
.runtime/postgres/data/base/16384/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  15043  15043_fsm  15043_vm  15048  15048_fsm  (+238 more)
.runtime/postgres/data/global/: 1260  1262  2671  2672  2676  config_exec_params  pg_control  pg_internal.init
apps/api/: Dockerfile  pyproject.toml
apps/api/src/ytclfr_api/: main.py  wiring.py
apps/frontend/: package-lock.json  package.json  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/lib/: api.ts  config.ts  types.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/ytclfr_worker/: celery_app.py  worker.py
apps/worker/tests/: conftest.py
apps/worker/tests/unit/: test_action_engine.py  test_ai_parser.py  test_ocr_engine.py  test_pipeline_tasks.py  test_spotify_service.py  test_task_support_ocr_persistence.py  test_text_cleaner.py  test_video_downloader.py
docs/: api-spec.md  architecture.md
docs/runbooks/: operations.md
infra/compose/: docker-compose.dev.yml  docker-compose.yml
infra/docker/: api.Dockerfile  frontend.Dockerfile  worker.Dockerfile
infra/k8s/: api-deployment.yaml  postgres.yaml  redis.yaml  worker-deployment.yaml
scripts/: dev_up.sh
(+25 files in other folders)
