[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ytclfr"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "psycopg[binary]>=3.1.19",
  "celery>=5.4.0",
  "redis>=5.0.4",
  "httpx>=0.27.0",
  "scenedetect[opencv]>=0.6.4",
  "rapidfuzz>=3.9.3",
  "prometheus-client>=0.20.0",
  "sentry-sdk[fastapi]>=2.5.1",
]

[tool.setuptools.packages.find]
where = ["apps/api/src", "apps/worker/src", "packages/core/src", "packages/contracts/src", "packages/domain/src", "packages/application/src", "packages/infrastructure/src"]